Adding page's title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Hello Fusgofal</title>
+</head>
+<body>
+	<h1>This is my first Github Page</h1>
+	
+</body>
+</html>
